--- a/.env
+++ b/.env
@@ -3,3 +3,12 @@ POSTGRES_PASSWORD=password
 POSTGRES_DB=app
 
 DATABASE_URL="postgresql://user:password@db:5432/app?schema=public"
+
+EMAIL_HOST=maildev
+EMAIL_PORT=1025
+EMAIL_PASSWORD=
+EMAIL_FROM=noreply@watchlist.com
+
+FRONTEND_URL=http://localhost:3000
+
+JWT_SECRET=your-super-secret-jwt-key-here
