--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "@nestjs/platform-express": "^11.0.11",
     "@nestjs/swagger": "^11.2.0",
     "@prisma/client": "^6.4.1",
-    "@types/jsonwebtoken": "9.0.10",
     "@types/bcrypt": "5.0.2",
-    "jsonwebtoken": "9.0.2",
+    "@types/jsonwebtoken": "9.0.10",
+    "@types/nodemailer": "^6.4.17",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "jsonwebtoken": "9.0.2",
+    "nodemailer": "^7.0.5",
     "reflect-metadata": "^0.2.2",
     "zod": "4.0.5"
   },
